--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </nav>
       <div class="card" style="width: 18rem;">
-        <img src="prajwal.jpeg" class="card-img-top" alt="...">
+        <img src="rushikesh.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="pra.jpeg" class="card-img-top" alt="...">
+        <img src="rush.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
